--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body bgcolor="skyblue">
 <body>
 <h1>Al Christian Limos</h1>
-<img src="C:\Users\MyPC\Downloads\IAN SCHOOL\Documents\2X2 ian.png" style="width:200px; height:200px; border-radius:50%;">
+<img src="https://raw.githubusercontent.com/alchristianlimos/cv/main/2X2%20ian.png" style="width:200px; height:200px; border-radius:50%;">
 <table border="1" cellpadding="10">
 <tr>
 <td>
@@ -37,4 +37,5 @@
 <button type="submit">Send</button>
 </form>
 </body>
+
 </html>
